--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/main.ts",
+    "start": "node build/main.js",
     "env:dev": "docker-compose up -d"
   },
   "author": "",
