feat: added build comand

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ TENNANT_DATABASE=publisher
 TENNANT_PASSWORD=root
 TENNANT_USER=root
 TENNANT_PORT=5432
-
 MONGO_URI=mongodb://root:root@localhost:27017
+PORT=8080
 
