--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,3 @@
-TENNANT_SERVER_URL=localhost
-TENNANT_DATABASE=publisher
-TENNANT_PASSWORD=root
-TENNANT_USER=root
-TENNANT_PORT=5432
-MONGO_URI=mongodb://root:root@localhost:27017
-PORT=8080
+PORT=8081
+TENNANT_API_BASE_URL=http://ec2-3-82-148-72.compute-1.amazonaws.com:8080
 
