--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "inversify": "^6.0.1",
@@ -27,6 +28,7 @@
     "typeorm": "^0.3.9"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
     "ts-node": "^10.9.1"
