--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "inversify": "^6.0.1",
