--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
     "ts-node": "^10.9.1"
